# FireRedVAD

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: fireredvad  inference_aed.sh  inference_stream_vad.sh  inference_vad.sh
fireredvad/: __init__.py  aed.py  stream_vad.py  vad.py
fireredvad/core/: audio_feat.py  constants.py  detect_model.py  stream_vad_postprocessor.py  vad_postprocessor.py
fireredvad/utils/: io.py  param.py
