[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firered-vad"
version = "0.0.1"
description = "FireRedVAD: A SOTA Industrial-Grade Voice Activity Detection & Audio Event Detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Kaituo Xu"},
    {name = "Wenpeng Li"},
    {name = "Kai Huang"},
    {name = "Kun Liu"},
]
maintainers = [
    {name = "Xiaohongshu FireRedTeam"},
]
keywords = [
    "voice-activity-detection",
    "vad",
    "audio-event-detection",
    "aed",
    "speech",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "kaldiio>=2.18.0",
    "kaldi-native-fbank>=1.15",
    "soundfile>=0.12.0",
    "textgrid",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
cpu = [
    "torch>=2.0.0",
]
dev = [
    "build",
    "twine",
    "ruff",
]

[project.scripts]
fireredvad = "fireredvad.bin.fireredvad_cli:main"

[project.urls]
Homepage = "https://github.com/FireRedTeam/FireRedVAD"
Repository = "https://github.com/FireRedTeam/FireRedVAD"
"Model (HuggingFace)" = "https://huggingface.co/FireRedTeam/FireRedVAD"
"Model (ModelScope)" = "https://www.modelscope.cn/models/xukaituo/FireRedVAD"

[tool.setuptools.packages.find]
include = ["fireredvad*"]
exclude = ["examples*", "assets*", "tests*"]

[tool.setuptools.package-data]
fireredvad = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
